Сделал роли(при реге User) Выдаёт error если нет прав для действия Исправил баг с открытием пустой публикации(при бане =1)